Added tenant-aware user retrieval methods in UserServiceImpl with DTO abstraction
- Replaced inefficient in-memory filtering with JPA query: findByTenantId(UUID)
- Implemented getAllUsersForCurrentTenant() using TenantContext for per-request tenant isolation
- Added toDTO() mapper to convert User entities to safe response models
- Ensured only relevant user data (id, name, email, role) is exposed via UserDTO
- Optimized for clean code, scalability, and multi-tenant security